[project]
name = "heartbeats-benchmarking"
version = "0.1.0"
description = "Benchmarking tools for heartbeat protocols and connection overhead analysis"
requires-python = ">=3.13"
dependencies = [
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]
